Fixed logo on mobile. Update og:image height so FB uses correct image.

--- a/style.scss
+++ b/style.scss
@@ -199,7 +199,7 @@ $logo-size: 40px;
 
 @media all and (max-device-width: 650px) {
     html {
-        font-size: 2.8em;
+        font-size: 1.2em;
     }
     #iframe-container {
         position: relative;
@@ -229,10 +229,11 @@ $logo-size: 40px;
     #page-title {
         text-align: center;
         width: 100%;
-        height: 5em;
+        height: 6.5em;
 
         background-position: center;
         background-size: 75%;
+        display: inline-block;
     }
 
     #page-information {
@@ -240,6 +241,8 @@ $logo-size: 40px;
         opacity: 1 !important;
         transform: none;
         text-align: left;
+
+        font-size: 1em;
 
         max-width: 100%;
         width: 100%;
